Commit in process

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Open+Sans:wght@300&family=Zen+Antique+Soft&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!-- Bootstrap Scripts -->
@@ -58,6 +60,17 @@
   </section>
   <!-- Text Section -->
   <section>
+
+    <div class="intro-cols row">
+      <div  class="col-lg-4 col-md-4 col-md-10" id="intro-col-1">
+        <h3>Hello</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquam condimentum dolor, faucibus egestas turpis vulputate non. Suspendisse feugiat est mauris, elementum laoreet augue sollicitudin et.</p>
+      </div>
+      <div class="col-lg-4 col-md-4 col-md-10" id="intro-col-2">
+        <h3>Hello</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquam condimentum dolor, faucibus egestas turpis vulputate non. Suspendisse feugiat est mauris, elementum laoreet augue sollicitudin et.</p>
+      </div>
+    </div>
 
     <div class="subtitle">
       <h2 id="text-beginning">Black Begins</h2>
